# Quicksand

./: .gitignore  .gitmodules  5.10-prezero.patch  Makefile  README.md  build_all.sh  c6525-100g.profile  cloudlab.profile  configure_switch.py  setup.sh  shared.sh  test.sh
app/DataFrame/: CMakeLists.txt
app/DataFrame/app/: CMakeLists.txt  main.cc
app/excamera/: .gitignore  Makefile  baseline.py  build_all.sh
app/imagenet/: Makefile  baseline.conf  baseline.cpp  baseline_gpu.conf  baseline_gpu.cpp  baseline_gpu.hpp  build_opencv.sh  calibrator_client.conf  calibrator_server.conf  dataloader.cpp  dataloader.hpp  distributed.cpp  gpu.hpp  image.cpp  image.hpp  image_kernel.cpp  image_kernel.hpp  memtest.cpp  time_calibrator.cpp  train.cpp
app/phoenix++-1.0/: Defines.mk
app/socialNetwork/: CMakeLists.txt  build.sh  down.sh  down_backend.sh  social_network.thrift  up.sh  up_backend.sh
app/socialNetwork/single_obj/src/: BackEndService.cpp  BackEndService.hpp  CMakeLists.txt  ThriftBackEndServer.cpp  ThriftBackEndServer.hpp  main.cpp  states.cpp  states.hpp  utils.hpp
app/socialNetwork/src/: BackEndService.cpp  BackEndService.hpp  CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp  HomeTimelineService.h  MediaService.h  MediaStorageService.h  PostStorageService.h  SocialGraphService.h  TextService.h  ThriftBackEndServer.cpp  ThriftBackEndServer.hpp  UniqueIdService.h  UrlShortenService.h  UserMentionService.h  UserService.h  UserTimelineService.h  defs.hpp  main.cpp  utils.cpp  utils.h  utils.hpp
app/socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp  HomeTimelineService.h  MediaService.h  PostStorageService.h  SocialGraphService.h  TextService.h  UniqueIdService.h  UrlShortenService.h  UserMentionService.h  UserService.h
app/socialNetwork/src/FrontEndProxy/: CMakeLists.txt  FrontEndProxy.cpp
app/socialNetwork/src/HomeTimelineService/: CMakeLists.txt  HomeTimelineHandler.h  HomeTimelineService.cpp
app/socialNetwork/src/MediaService/: CMakeLists.txt  MediaHandler.h  MediaService.cpp
app/socialNetwork/src/PostStorageSerivce/: CMakeLists.txt  PostStorageHandler.h  PostStorageService.cpp
app/socialNetwork/src/SocialGraphService/: CMakeLists.txt  SocialGraphHandler.h  SocialGraphService.cpp
app/socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
app/socialNetwork/src/UniqueIdService/: CMakeLists.txt  UniqueIdHandler.h  UniqueIdService.cpp
app/socialNetwork/src/UrlShortenService/: CMakeLists.txt  UrlShortenHandler.h  UrlShortenService.cpp
app/socialNetwork/src/UserMentionService/: CMakeLists.txt  UserMentionHandler.h  UserMentionService.cpp
app/socialNetwork/src/UserService/: CMakeLists.txt  UserHandler.h  UserService.cpp
app/socialNetwork/src/UserTimelineService/: CMakeLists.txt  UserTimelineHandler.h  UserTimelineService.cpp
app/tuplex/: setup.py
app/tuplex/tuplex/nu/: CMakeLists.txt
app/tuplex/tuplex/nu/src/: main.cc
bench/: bench_compute_intensity.cpp  bench_controller.cpp  bench_cpu_overloaded.cpp  bench_dis_executor.cpp  bench_dis_hash_table.cpp  bench_fake_migration.cpp  bench_fragmentation.cpp  bench_hashtable_timeseries.cpp  bench_memcached_client.cpp  bench_memcached_server.cpp  bench_migrate.cpp  bench_proclet_call_bw.cpp  bench_proclet_call_lat.cpp  bench_proclet_call_tput.cpp  bench_real_cpu_pressure.cpp  bench_real_mem_pressure.cpp  bench_rem_obj_call_lat.cpp  bench_rem_obj_call_tput.cpp  bench_rpc_lat.cpp  bench_rpc_tput.cpp  bench_sharded_map.cpp  bench_sharded_multi_set.cpp  bench_sharded_pair_collect.cpp  bench_sharded_partitioner.cpp  bench_sharded_queue.cpp  bench_sharded_service.cpp  bench_sharded_set.cpp  bench_sharded_sorter.cpp  bench_sharded_stack.cpp  bench_sharded_unordered_map.cpp  bench_sharded_vector.cpp  bench_tcp_lat.cpp  bench_tcp_tput.cpp  bench_thread.cpp
caladan/: README.md  build.sh  patch.sh
caladan/base/: cpu.c
caladan/iokernel/: control.c  defs.h  ias.c  ias.h  ias_bw.c  ias_constant.h  ias_ps.c  ias_rp.c  ias_ts.c  ksched.h  main.c  netlink.c  rx.c  sched.c  sched.h
caladan/ksched/: ksched.c  ksched.h
caladan/rpc/: Makefile  rpc.cc  rpc.h  test.cc
caladan/runtime/: cfg.c  defs.h  init.c  (+13 more)
conf/: client1  client2  controller  server1  server2
ddb_helper/: ctrl_proxy.cpp  send.py
exp/: .gitignore  TODO  shared.sh
inc/: cond_var.hpp  conn_mgr.hpp  ctrl.hpp  ctrl_client.hpp  ctrl_conn_mgr.hpp  ctrl_server.hpp  defs.hpp  dis_hash_table.hpp  dis_heap.hpp  dis_mem_pool.hpp  heap_mgr.hpp  migrator.hpp  monitor.hpp  mutex.hpp  obj_conn_mgr.hpp  obj_server.hpp  rem_obj.hpp  rem_ptr.hpp  rem_raw_ptr.hpp  rem_shared_ptr.hpp  rem_unique_ptr.hpp  runtime.hpp  runtime_alloc.hpp  runtime_deleter.hpp  stack_allocator.hpp  stack_manager.hpp  time.hpp
src/: command_line.cpp  common.cpp  ctrl.cpp  ctrl_client.cpp  ctrl_main.cpp  ctrl_server.cpp  dis_heap.cpp  dis_mem_pool.cpp  heap_mgr.cpp  mem_hook.cpp  migrator.cpp  monitor.cpp  obj_conn_mgr.cpp  obj_server.cpp  pressure_handler.cpp  proclet_mgr.cpp  proclet_server.cpp  resource_reporter.cpp  rpc_client_mgr.cpp  rpc_server.cpp  runtime.cpp  stack_allocator.cpp  stack_manager.cpp  time.cpp
test/: test_cereal.cpp  test_closure.cpp  test_compute_intensity.cpp  test_compute_proclet.cpp  test_condvar.cpp  test_continuous_migrate.cpp  test_cpu_load.cpp  test_dis_array.cpp  test_dis_executor.cpp  test_dis_hash_table.cpp  test_dis_heap.cpp  test_dis_mem_pool.cpp  test_dis_vector.cpp  test_fast_path.cpp  test_interproclet.cpp  test_iter.cpp  test_lock.cpp  test_max_num_proclets.cpp  test_method.cpp  test_migrate.cpp  test_multi_objs.cpp  test_multiproclets.cpp  test_nested_proclet.cpp  test_nested_rem_obj.cpp  test_pass_obj.cpp  test_pass_proclet.cpp  test_perf.cpp  test_proclet.cpp  test_rem_obj.cpp  test_rem_raw_ptr.cpp  test_rem_shared_ptr.cpp  test_rem_unique_ptr.cpp  test_sharded_array.cpp  test_sharded_collection.cpp  test_sharded_map.cpp  test_sharded_pair_collect.cpp  test_sharded_partitioner.cpp  test_sharded_queue.cpp  test_sharded_service.cpp  test_sharded_set.cpp  (+12 more)
(+1042 files in other folders)
