include("../cmake/Findlibmemcached.cmake")
include("../cmake/Findthrift.cmake")
include("../cmake/FindLibevent.cmake")

find_package(libmongoc-1.0 1.13 REQUIRED)
find_package(nlohmann_json 3.5.0 REQUIRED)
find_package(Threads)
find_package(OpenSSL REQUIRED)
find_package(amqpcpp REQUIRED)

set(Boost_USE_STATIC_LIBS ON)
find_package(Boost 1.54.0 REQUIRED COMPONENTS log log_setup)
if(Boost_FOUND)
  include_directories(${Boost_INCLUDE_DIRS})
  link_directories(${Boost_LIBRARY_DIRS})
endif()

set(THRIFT_GEN_CPP_DIR ../../gen-cpp)
set(NU_DIR ../../../)
set(CALADAN_DIR ${NU_DIR}/caladan/)
set(FOLLY_DIR ${CALADAN_DIR}/deps/folly/)
execute_process(COMMAND nproc OUTPUT_VARIABLE NCORES)
add_compile_definitions(NCORES=${NCORES})

include_directories(${NU_DIR}/inc)
include_directories(${CALADAN_DIR}/inc)
include_directories(${CALADAN_DIR}/bindings/cc)
include_directories(${FOLLY_DIR}/include)

link_directories(${CALADAN_DIR})
link_directories(${CALADAN_DIR}/bindings/cc)
link_directories(${CALADAN_DIR}/rdma-core/build/lib/statics/)
link_directories(${NU_DIR})

add_subdirectory(FrontEndProxy)
add_subdirectory(TextService)
add_subdirectory(UniqueIdService)
add_subdirectory(UserService)
add_subdirectory(SocialGraphService)
add_subdirectory(PostStorageSerivce)
add_subdirectory(UserTimelineService)
add_subdirectory(ComposePostService)
add_subdirectory(UserMentionService)
add_subdirectory(UrlShortenService)
add_subdirectory(MediaService)
add_subdirectory(HomeTimelineService)
